// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with errors 1`] = `
<div>
  <div
    className="govuk-form-group govuk-form-group--error"
  >
    <label
      className="govuk-label"
      htmlFor="newPasswordCustom"
    >
      Create new password
    </label>
    <span
      className="govuk-error-message"
      id="newPasswordError"
    >
      <span
        className="govuk-visually-hidden"
      >
        Error:
      </span>
      this is a test
    </span>
    <input
      className="govuk-input govuk-!-width-one-half"
      id="newPasswordCustom"
      name="newPassword"
      noValidate={true}
      onChange={[Function]}
      type="password"
    />
  </div>
  <div
    className="govuk-form-group"
  >
    <details
      className="govuk-details"
    >
      <summary
        className="govuk-details__summary"
      >
        <span
          className="govuk-details__summary-text"
        >
          Help choosing a valid password
        </span>
      </summary>
      <div
        className="govuk-details__text"
      >
        <div>
          <p
            className="govuk-body"
          >
            Your password must:
          </p>
          <ul
            className="govuk-list govuk-list--bullet"
          >
            <li>
              be between 8 and 16 characters
            </li>
            <li>
              include at least one uppercase letter and one lowercase letter
            </li>
            <li>
              include at least one number or one symbol
            </li>
          </ul>
        </div>
      </div>
    </details>
  </div>
  <div
    className="govuk-form-group govuk-form-group--error"
  >
    <label
      className="govuk-label"
      htmlFor="reenteredPasswordCustom"
    >
      Re-type password
    </label>
    <span
      className="govuk-error-message"
      id="reenteredPasswordError"
    >
      <span
        className="govuk-visually-hidden"
      >
        Error:
      </span>
      this is a test
    </span>
    <input
      className="govuk-input govuk-!-width-one-half"
      id="reenteredPasswordCustom"
      name="reenteredPassword"
      noValidate={true}
      onChange={[Function]}
      type="password"
    />
  </div>
</div>
`;

exports[`renders correctly without props passed in 1`] = `
<div>
  <div
    className="govuk-form-group "
  >
    <label
      className="govuk-label"
      htmlFor="newPasswordCustom"
    >
      Create new password
    </label>
    <input
      className="govuk-input govuk-!-width-one-half"
      id="newPasswordCustom"
      name="newPassword"
      noValidate={true}
      onChange={[Function]}
      type="password"
    />
  </div>
  <div
    className="govuk-form-group"
  >
    <details
      className="govuk-details"
    >
      <summary
        className="govuk-details__summary"
      >
        <span
          className="govuk-details__summary-text"
        >
          Help choosing a valid password
        </span>
      </summary>
      <div
        className="govuk-details__text"
      >
        <div>
          <p
            className="govuk-body"
          >
            Your password must:
          </p>
          <ul
            className="govuk-list govuk-list--bullet"
          >
            <li>
              be between 8 and 16 characters
            </li>
            <li>
              include at least one uppercase letter and one lowercase letter
            </li>
            <li>
              include at least one number or one symbol
            </li>
          </ul>
        </div>
      </div>
    </details>
  </div>
  <div
    className="govuk-form-group "
  >
    <label
      className="govuk-label"
      htmlFor="reenteredPasswordCustom"
    >
      Re-type password
    </label>
    <input
      className="govuk-input govuk-!-width-one-half"
      id="reenteredPasswordCustom"
      name="reenteredPassword"
      noValidate={true}
      onChange={[Function]}
      type="password"
    />
  </div>
</div>
`;
